Add findbugs to pom and fix issues found by findbugs